--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,6 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: 3.0.10
+  dio_cookie_manager: 1.0.0
+  cookie_jar: 1.0.1
 
   hybrid_webview_flutter:
     # When depending on this package from a real application you should use:
